Impressum und Datenschutz hinzugefügt

--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -2,79 +2,255 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assistify – Ihr KI-Kundensupport</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    :root {
+      --bg: #0f1116;
+      --text: #e8e8e8;
+      --accent: #00c2ff;
+      --card-bg: #1b1d23;
+      --hover: #00b0e6;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      overflow-x: hidden;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(20, 20, 25, 0.8);
+      position: sticky;
+      top: 0;
+      backdrop-filter: blur(10px);
+      z-index: 100;
+    }
+
+    .logo {
+      font-size: 1.6rem;
+      font-weight: 700;
+      color: var(--accent);
+    }
+
+    nav {
+      display: flex;
+      gap: 20px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+      transition: color 0.2s ease;
+    }
+
+    nav a:hover {
+      color: var(--accent);
+    }
+
+    /* Hamburger Menu */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle span {
+      height: 3px;
+      width: 25px;
+      background: var(--text);
+      margin-bottom: 4px;
+      border-radius: 2px;
+      transition: all 0.3s;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        right: 30px;
+        background: var(--card-bg);
+        border-radius: 10px;
+        padding: 15px;
+      }
+      nav.active {
+        display: flex;
+      }
+      .menu-toggle {
+        display: flex;
+      }
+    }
+
+    /* Hero Section */
+    .hero {
+      text-align: center;
+      padding: 120px 20px 80px;
+    }
+
+    .hero h1 {
+      font-size: 2.8rem;
+      color: var(--accent);
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #ccc;
+      margin-bottom: 25px;
+    }
+
+    .cta-btn {
+      background: var(--accent);
+      border: none;
+      color: #fff;
+      font-weight: bold;
+      padding: 14px 28px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .cta-btn:hover {
+      background: var(--hover);
+    }
+
+    /* Pricing */
+    .pricing {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      padding: 80px 20px;
+    }
+
+    .card {
+      background: var(--card-bg);
+      padding: 30px;
+      border-radius: 15px;
+      width: 280px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+    }
+
+    .card h3 {
+      color: var(--accent);
+      margin-bottom: 10px;
+    }
+
+    .price {
+      font-size: 2rem;
+      margin: 10px 0;
+    }
+
+    .card ul {
+      list-style: none;
+      text-align: left;
+      margin: 15px 0;
+    }
+
+    .card ul li {
+      padding: 5px 0;
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+
+    footer {
+      text-align: center;
+      padding: 25px;
+      border-top: 1px solid #222;
+      color: #aaa;
+      font-size: 0.9rem;
+    }
+
+    footer a {
+      color: var(--accent);
+      text-decoration: none;
+      margin: 0 8px;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
   <header>
-    <h1>🤖 Assistify</h1>
-    <p>Automatisieren Sie Ihren Kundensupport mit KI – sparen Sie Zeit, Geld und Nerven.</p>
+    <div class="logo">Assistify</div>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav id="nav-menu">
+      <a href="index.html">Home</a>
+      <a href="#">Login</a>
+      <a href="#">Sign up</a>
+      <a href="impressum.html">Impressum</a>
+      <a href="datenschutz.html">Datenschutz</a>
+    </nav>
   </header>
 
-  <main>
-    <section class="intro">
-      <h2>Was ist Assistify?</h2>
-      <p>
-        Assistify ist ein intelligenter, individuell anpassbarer KI-Chatbot für Ihr Unternehmen. 
-        Er übernimmt den Kundensupport, beantwortet häufige Fragen blitzschnell 
-        und steigert gleichzeitig die Kundenzufriedenheit.
-      </p>
-    </section>
+  <section class="hero">
+    <h1>Ihr smarter KI-Kundensupport</h1>
+    <p>Automatisieren Sie Ihren Kundensupport mit KI – und sparen Sie täglich Zeit, Geld und Nerven.</p>
+    <button class="cta-btn">Jetzt starten</button>
+  </section>
 
-    <!-- 💰 Preisübersicht -->
-    <section class="pricing" id="pricing">
-      <h2>Preise</h2>
-      <p>Wählen Sie den Plan, der zu Ihrem Unternehmen passt.</p>
-      
-      <div class="pricing-container">
-        
-        <!-- Starter Plan -->
-        <div class="plan">
-          <h3>Starter</h3>
-          <p class="price">29€ <span>/ Monat</span></p>
-          <ul>
-            <li>✅ KI-Chatbot für grundlegende Anfragen</li>
-            <li>✅ Bis zu 500 Chats pro Monat</li>
-            <li>✅ E-Mail Support</li>
-            <li>🚫 Kein Branding-Entfernen</li>
-          </ul>
-          <button class="btn">Jetzt starten</button>
-        </div>
-
-        <!-- Business Plan -->
-        <div class="plan featured">
-          <h3>Business</h3>
-          <p class="price">149€ <span>/ Monat</span></p>
-          <ul>
-            <li>✅ Unbegrenzte Chats</li>
-            <li>✅ Volle KI-Personalisierung</li>
-            <li>✅ Branding entfernen</li>
-            <li>✅ Priorisierter Support</li>
-            <li>✅ Statistiken & Berichte</li>
-          </ul>
-          <button class="btn highlight">Beliebteste Wahl</button>
-        </div>
-
-        <!-- Lifetime Plan -->
-        <div class="plan">
-          <h3>Einmalkauf</h3>
-          <p class="price">499€ <span>einmalig</span></p>
-          <ul>
-            <li>✅ Alle Business-Funktionen inklusive</li>
-            <li>✅ Lebenslanger Zugang</li>
-            <li>✅ Individuelle Anpassung nach Wunsch</li>
-            <li>✅ Keine weiteren Kosten</li>
-          </ul>
-          <button class="btn">Jetzt kaufen</button>
-        </div>
-
-      </div>
-    </section>
-  </main>
+  <section class="pricing">
+    <div class="card">
+      <h3>Starter</h3>
+      <p class="price">29 € / Monat</p>
+      <ul>
+        <li>1 KI-Chatbot</li>
+        <li>Basis-Support</li>
+        <li>E-Mail-Integration</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Business</h3>
+      <p class="price">149 € / Monat</p>
+      <ul>
+        <li>Bis zu 5 Chatbots</li>
+        <li>Individuelles Design</li>
+        <li>24/7 Prioritäts-Support</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Einmalkauf</h3>
+      <p class="price">499 € einmalig</p>
+      <ul>
+        <li>Eigener Chatbot</li>
+        <li>Unbegrenzte Nutzung</li>
+        <li>Hosting-Unterstützung</li>
+      </ul>
+    </div>
+  </section>
 
   <footer>
-    <p>© 2025 Assistify. Alle Rechte vorbehalten.</p>
+    <p>© 2025 Assistify | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
+
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const navMenu = document.getElementById('nav-menu');
+    menuToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
