Logo vergrößert und Schriftzug neben dem Logo hinzugefügt

--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -10,10 +10,11 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html">
-        <img src="assistify_logo.png" alt="Assistify Logo" style="height: 45px; vertical-align: middle;">
-      </a>
-    </div>
+  <a href="index.html" class="logo-link">
+    <img src="assistify_logo.png" alt="Assistify Logo">
+    <span>Assistify</span>
+  </a>
+</div>
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
