--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -10,11 +10,11 @@
 <body>
   <header>
     <div class="logo">
-  <a href="index.html" class="logo-link">
-    <img src="assistify_logo.png" alt="Assistify Logo">
-    <span>Assistify</span>
-  </a>
-</div>
+      <a href="index.html" class="logo-link">
+        <img src="assistify_logo.png" alt="Assistify Logo">
+        <span>Assistify</span>
+      </a>
+    </div>
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
@@ -69,6 +69,12 @@
     <p>© 2025 Assistify | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const navMenu = document.getElementById('nav-menu');
+    menuToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
