--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -10,9 +10,8 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html" class="logo-link">
-        <img src="assistify_logo.png" alt="Assistify Logo">
-        <span>Assistify</span>
+      <a href="index.html">
+        <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
     <div class="menu-toggle" id="menu-toggle">
