--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -9,9 +9,10 @@
 
 <body>
   <header>
-    <div class="logo">
-      <a href="index.html">
+    <div class="header-center">
+      <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
+        <span class="logo-text">Assistify</span>
       </a>
     </div>
     <div class="menu-toggle" id="menu-toggle">
