--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -9,17 +9,19 @@
 
 <body>
   <header>
-    <div class="header-center">
+    <div class="logo-area">
       <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
         <span class="logo-text">Assistify</span>
       </a>
     </div>
+
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
       <span></span>
     </div>
+
     <nav id="nav-menu">
       <a href="index.html">Home</a>
       <a href="#">Login</a>
