Variante 0: Logo groß links + Assistify mittig

--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -9,19 +9,19 @@
 
 <body>
   <header>
+    <!-- Linkes Logo -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
-        <span class="logo-text">Assistify</span>
       </a>
     </div>
 
-    <div class="menu-toggle" id="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
+    <!-- Mittiger Markenname -->
+    <div class="brand-name">
+      <h2>Assistify</h2>
     </div>
 
+    <!-- Navigation -->
     <nav id="nav-menu">
       <a href="index.html">Home</a>
       <a href="#">Login</a>
@@ -70,13 +70,5 @@
   <footer>
     <p>© 2025 Assistify | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
-
-  <script>
-    const menuToggle = document.getElementById('menu-toggle');
-    const navMenu = document.getElementById('nav-menu');
-    menuToggle.addEventListener('click', () => {
-      navMenu.classList.toggle('active');
-    });
-  </script>
 </body>
 </html>
