Variante 0.2: Größeres Logo mit Glow und zentriertem Titel

--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -9,14 +9,14 @@
 
 <body>
   <header>
-    <!-- Linkes Logo -->
+    <!-- Logo links -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
-    <!-- Mittiger Markenname -->
+    <!-- Markenname mittig -->
     <div class="brand-name">
       <h2>Assistify</h2>
     </div>
