--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -21,6 +21,13 @@
       <h2>Assistify</h2>
     </div>
 
+    <!-- Menü-Toggle (für Mobil) -->
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
     <!-- Navigation -->
     <nav id="nav-menu">
       <a href="index.html">Home</a>
@@ -70,5 +77,13 @@
   <footer>
     <p>© 2025 Assistify | <a href="impressum.html">Impressum</a> | <a href="datenschutz.html">Datenschutz</a></p>
   </footer>
+
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const navMenu = document.getElementById('nav-menu');
+    menuToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
