--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -9,22 +9,26 @@
 
 <body>
   <header>
+    <!-- Logo links -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
+    <!-- Markenname mittig -->
     <div class="brand-name">
       <h2>Assistify</h2>
     </div>
 
+    <!-- Menü-Toggle -->
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
       <span></span>
     </div>
 
+    <!-- Navigation -->
     <nav id="nav-menu">
       <a href="index.html">Home</a>
       <a href="#">Login</a>
@@ -77,6 +81,7 @@
     </p>
   </footer>
 
+  <!-- Neues Script -->
   <script src="script.js"></script>
 </body>
 </html>
