Update: neue index.html mit funktionierenden Links

--- a/assistify-landing/index.html
+++ b/assistify-landing/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header>
     <!-- Logo links -->
     <div class="logo-area">
@@ -21,7 +22,7 @@
       <h2>Assistify</h2>
     </div>
 
-    <!-- Menü-Toggle -->
+    <!-- Menü-Toggle (für mobile Ansicht) -->
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
@@ -31,19 +32,21 @@
     <!-- Navigation -->
     <nav id="nav-menu">
       <a href="index.html">Home</a>
-      <a href="#">Login</a>
-      <a href="#">Sign up</a>
+      <a href="login.html">Login</a>
+      <a href="signup.html">Sign up</a>
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
   </header>
 
+  <!-- HERO SECTION -->
   <section class="hero">
     <h1>Ihr smarter KI-Kundensupport</h1>
     <p>Automatisieren Sie Ihren Kundensupport mit KI – und sparen Sie täglich Zeit, Geld und Nerven.</p>
-    <button class="cta-btn">Jetzt starten</button>
+    <a href="signup.html" class="cta-btn">Jetzt starten</a>
   </section>
 
+  <!-- PREIS-SECTION -->
   <section class="pricing">
     <div class="card">
       <h3>Starter</h3>
@@ -54,6 +57,7 @@
         <li>E-Mail-Integration</li>
       </ul>
     </div>
+
     <div class="card">
       <h3>Business</h3>
       <p class="price">149 € / Monat</p>
@@ -63,6 +67,7 @@
         <li>24/7 Prioritäts-Support</li>
       </ul>
     </div>
+
     <div class="card">
       <h3>Einmalkauf</h3>
       <p class="price">499 € einmalig</p>
@@ -74,14 +79,28 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer>
-    <p>© <span id="year"></span> Assistify | 
-      <a href="impressum.html">Impressum</a> | 
+    <p>© <span id="year"></span> Assistify |
+      <a href="impressum.html">Impressum</a> |
       <a href="datenschutz.html">Datenschutz</a>
     </p>
   </footer>
 
-  <!-- Neues Script -->
+  <!-- Skript -->
   <script src="script.js"></script>
+  <script>
+    // Automatische Jahreszahl im Footer
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Menü-Toggle für Mobile
+    const toggle = document.getElementById("menu-toggle");
+    const nav = document.getElementById("nav-menu");
+
+    toggle.addEventListener("click", () => {
+      nav.classList.toggle("active");
+      toggle.classList.toggle("open");
+    });
+  </script>
 </body>
 </html>
