--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Logo links -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
-        <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
+        <img src="/assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
