Fix: corrected image and asset paths for Render

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <!-- Logo links -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
-        <img src="/assistify_logo.png" alt="Assistify Logo" class="logo-img">
+        <!-- Wichtig: relativer Pfad ohne Slash -->
+        <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
@@ -81,7 +82,6 @@
     </p>
   </footer>
 
-  <!-- Neues Script -->
   <script src="script.js"></script>
 </body>
 </html>
