--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,15 @@
       <h2>Assistify</h2>
     </div>
 
+    <!-- Menü-Toggle (Burger-Button) -->
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
     <!-- Navigation -->
-    <nav id="nav-menu" class="nav-desktop">
+    <nav id="nav-menu">
       <a href="index.html">Home</a>
       <a href="login.html">Login</a>
       <a href="signup.html">Sign up</a>
@@ -34,7 +41,7 @@
   <section class="hero">
     <h1>Ihr smarter KI-Kundensupport</h1>
     <p>Automatisieren Sie Ihren Kundensupport mit KI – und sparen Sie täglich Zeit, Geld und Nerven.</p>
-    <button class="cta-btn">Jetzt starten</button>
+    <button class="cta-btn" onclick="window.location.href='login.html'">Jetzt starten</button>
   </section>
 
   <section class="pricing">
@@ -77,8 +84,16 @@
   </footer>
 
   <script>
-    // Jahr automatisch aktualisieren
     document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Burger-Menü Logik
+    const toggle = document.getElementById("menu-toggle");
+    const nav = document.getElementById("nav-menu");
+
+    toggle.addEventListener("click", () => {
+      toggle.classList.toggle("open");
+      nav.classList.toggle("active");
+    });
   </script>
 </body>
 </html>
