--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Logo links -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
-        <img src="/assistify_logo.png" alt="Assistify Logo" class="logo-img">
+        <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
@@ -21,7 +21,7 @@
       <h2>Assistify</h2>
     </div>
 
-    <!-- Menü-Toggle -->
+    <!-- Menü-Toggle (Burger-Button) -->
     <div class="menu-toggle" id="menu-toggle">
       <span></span>
       <span></span>
@@ -41,7 +41,7 @@
   <section class="hero">
     <h1>Ihr smarter KI-Kundensupport</h1>
     <p>Automatisieren Sie Ihren Kundensupport mit KI – und sparen Sie täglich Zeit, Geld und Nerven.</p>
-    <button class="cta-btn">Jetzt starten</button>
+    <button class="cta-btn" onclick="window.location.href='login.html'">Jetzt starten</button>
   </section>
 
   <section class="pricing">
@@ -54,6 +54,7 @@
         <li>E-Mail-Integration</li>
       </ul>
     </div>
+
     <div class="card">
       <h3>Business</h3>
       <p class="price">149 € / Monat</p>
@@ -63,6 +64,7 @@
         <li>24/7 Prioritäts-Support</li>
       </ul>
     </div>
+
     <div class="card">
       <h3>Einmalkauf</h3>
       <p class="price">499 € einmalig</p>
@@ -81,7 +83,17 @@
     </p>
   </footer>
 
-  <!-- Neues Script -->
-  <script src="script.js"></script>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Burger-Menü Logik
+    const toggle = document.getElementById("menu-toggle");
+    const nav = document.getElementById("nav-menu");
+
+    toggle.addEventListener("click", () => {
+      toggle.classList.toggle("open");
+      nav.classList.toggle("active");
+    });
+  </script>
 </body>
 </html>
