--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
     // Jahr automatisch aktualisieren
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Burger-Menü Steuerung
+    // Burger-Menü öffnen/schließen
     const toggle = document.getElementById("menu-toggle");
     const nav = document.getElementById("nav-menu");
 
