--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Navigation -->
-    <nav id="nav-menu" class="nav-desktop">
+    <nav id="nav-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="login.html">Login</a></li>
