--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
 
 <body>
   <header>
-    <!-- Logo links -->
+    <!-- Logo -->
     <div class="logo-area">
       <a href="index.html" class="logo-link">
         <img src="assistify_logo.png" alt="Assistify Logo" class="logo-img">
       </a>
     </div>
 
-    <!-- Markenname mittig -->
+    <!-- Markenname -->
     <div class="brand-name">
       <h2>Assistify</h2>
     </div>
